--- a/upload/mailcow.conf
+++ b/upload/mailcow.conf
@@ -37,11 +37,11 @@ DBROOT=k7mgPNqgFCBGU32T2zSAzvFwlr6g
 # For IPv4 and IPv6 leave it empty: HTTP_BIND= & HTTPS_PORT=
 # For IPv6 see https://mailcow.github.io/mailcow-dockerized-docs/firststeps-ip_bindings/
 
-HTTP_PORT=8080
-HTTP_BIND=127.0.0.1
+HTTP_PORT=80
+HTTP_BIND=
 
-HTTPS_PORT=8443
-HTTPS_BIND=127.0.0.1
+HTTPS_PORT=443
+HTTPS_BIND=
 
 # ------------------------------
 # Other bindings
