--- a/upload/mailcow.conf
+++ b/upload/mailcow.conf
@@ -41,7 +41,7 @@ HTTP_PORT=80
 HTTP_BIND=
 
 HTTPS_PORT=443
-HTTPS_BIND=
+HTTPS_BIND=127.0.0.1
 
 # ------------------------------
 # Other bindings
